ARXIVNG-408 fix jumping links

--- a/arxiv/base/static/sass/_custom.sass
+++ b/arxiv/base/static/sass/_custom.sass
@@ -12,6 +12,7 @@ footer
   padding: .5em 2em .75em 2em
   a
     color: #fff
+    border-bottom: 1px solid transparent
     &:hover,
     &:active
       border-bottom: 1px dotted #fff
@@ -39,6 +40,7 @@ footer
   padding: 0 .75em
   a
     color: #fff
+    border-bottom: 1px solid transparent
     &:visited
       color: #fff
     &:hover
